langda/history/DoubleSimple_5Round/test_history/dpl__addit:rough.pl_run5/#test_results_result.txt
Error evaluating Problog model:
    cleanup, actions = node()  # Evaluate the node
                       ^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/eval_nodes.py", line 872, in __call__
    raise ArithmeticError(base_message, location)
problog.logic.ArithmeticError: Error while evaluating 'is'(X1,0+9*(10^length([]))): Unknown function 'length'/1 at 12:51.% Problog Inference Result：
multi_addition([img_7, img_9],[img_3, img_1, img_2],310) = 1.0000